tests/error/result_errors/state_result_missing_tag.err
Error: Type mismatch (at $FILE:12:17)
   | 
10 | def main() -> None:
11 |     q1 = qubit()
12 |     state_result(q1)
   |                  ^^ Expected expression of type `str`, got `qubit`

Guppy compilation failed due to 1 previous error
